<?xml version="1.0"?>
<package>
  <name>rc_demo</name>
  <version>0.0.0</version>
  <description>python scripts for offboard control</description>

  <maintainer email="sblee@jmarple.ai">sblee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
